--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django
+
+# Local Netlify folder
+.netlify
